# Abschlussprojekt

./: README.md  app.py  arzt_dashboard.py  ekgdata.py  patient_dashboard.py  pyproject.toml
