[project]
name = "Abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "31eule", email = "sk3482@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "numpy>=2.3.0", "pandas>=2.3.0", "plotly>=6.1.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
